changed hero image

--- a/contact.css
+++ b/contact.css
@@ -2,7 +2,7 @@
 
 /* HERO */
 .contact-hero {
-  background: #0a0f14 url("assets/cta2.jpg") center/cover no-repeat;
+  background: #0a0f14 url("assets/cta.jpg") center/cover no-repeat;
   padding: 130px 0;
   color: #fff;
 }
